--- a/src/main/resources/templates/bubbles.html
+++ b/src/main/resources/templates/bubbles.html
@@ -43,7 +43,12 @@
         <span style="--i:14;"></span>
         <span style="--i:13;"></span>
     </div>
-    <div class="logo"><img src="../static/logo.png" alt="logo"></div>
+    <div class="logo">
+        <img src="../static/logo.png" alt="logo">
+    </div>
+    <div class="content">
+
+    </div>
 
 </div>
 
