--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,11 @@
 
 </div>
 
+<script src="../js/fetchFraDb.js"></script>
+<script src="../js/endpoints.js"></script>
+<!--
 <script src="../js/fetchActivity.js"></script>
+-->
 <script src="../js/formActivity.js"></script>
 
 </body>
