--- a/src/main/resources/templates/bubbles.html
+++ b/src/main/resources/templates/bubbles.html
@@ -46,11 +46,12 @@
     <div class="logo">
         <img src="../static/logo.png" alt="logo">
     </div>
-    <div class="content">
-
+    <div class="containercards">
+        <ul id="activitygrit"></ul>
     </div>
 
 </div>
 
+<script src="../js/index.js"></script>
 </body>
 </html>
