--- a/src/main/resources/static/bubbles.css
+++ b/src/main/resources/static/bubbles.css
@@ -13,6 +13,8 @@
 body{
     min-height: 100vh;
     background: #0c192c;
+    font-family: sans-serif;
+    background: linear-gradient(#141e30, #243b55);
 }
 .container{
     position: relative;
