--- a/src/main/resources/templates/timeslot.html
+++ b/src/main/resources/templates/timeslot.html
@@ -19,7 +19,7 @@
             <input
                     type="tel"
                     pattern="([01]?[0-9]|2[0-3]):[0-5][0-9]"
-                    name="timeslot"
+                    name="timeslotStart"
                     class="inputfield"
                     placeholder="10:00"
                     id="inpTimeslot">
@@ -41,6 +41,8 @@
     <tr>
         <th>Id</th>
         <th>Tidsinterval</th>
+        <th>Aktivitet</th>
+        <th>Medarbejder</th>
     </tr>
 </table>
 
