sat billeder ind til aktiviteter og hal til aktivitet har random generator og logo er beskåret

--- a/src/main/resources/templates/activity.html
+++ b/src/main/resources/templates/activity.html
@@ -45,7 +45,7 @@
                     type="text"
                     name="imageurl"
                     class="inputfield"
-                    placeholder="eks. ../static/activity.png"
+                    placeholder="../static/images/activity.png"
                     id="inpUrl">
         </div>
         <br>
