--- a/src/main/resources/templates/bubbles.html
+++ b/src/main/resources/templates/bubbles.html
@@ -44,7 +44,7 @@
         <span style="--i:13;"></span>
     </div>
     <div class="logo">
-        <img src="../static/logo.png" alt="logo">
+        <img src="../static/logo2.png" alt="logo">
     </div>
     <div class="containercards">
         <ul id="activitygrit"></ul>
